--- a/ptp_rus/localisation/eb_l_russian.yml
+++ b/ptp_rus/localisation/eb_l_russian.yml
@@ -1,6 +1,6 @@
 ﻿l_russian:
 #Mines
- eb_mineral:0 "Глубокая шахта"
+ eb_mineral:0 "Горнодобывающий комплекс"
  eb_mineral_desc:0 "Горнодобывающий комплекс, предназначенный для добычи полезных ископаемых в недрах планеты."
 
  eb_mineral_hab:0 "Отсек буксировки астероидов"
