--- a/ptp_rus/localisation/ebu_l_russian.yml
+++ b/ptp_rus/localisation/ebu_l_russian.yml
@@ -7,11 +7,11 @@
  eb_hydrofarm3_desc:0 "Модернизированная гидропонные ферма."
 
 #Mines
- eb_mineral2:0 "Глубокая шахта 2"
- eb_mineral2_desc:0 "Модернизированная глубокая шахта."
+ eb_mineral2:0 "Горнодобывающий комплекс 2"
+ eb_mineral2_desc:0 "Горнодобывающий комплекс, предназначенный для добычи полезных ископаемых в недрах планеты."
 
- eb_mineral3:0 "Глубокая шахта 3"
- eb_mineral3_desc:0 "Модернизированная глубокая шахта 2."
+ eb_mineral3:0 "Горнодобывающий комплекс 3"
+ eb_mineral3_desc:0 "Горнодобывающий комплекс, предназначенный для добычи полезных ископаемых в недрах планеты."
 
  eb_mineral_hab2:0 "Отсек буксировки астероидов 2"
  eb_mineral_hab2_desc:0 "Улучшенный буксирный отсек для астероидов."
