--- a/ptp_rus/localisation/extsynths_l_russian.yml
+++ b/ptp_rus/localisation/extsynths_l_russian.yml
@@ -2,7 +2,7 @@
 
  extsynth_start_screen_PART_ONE: "С тех пор, как наши первые примитивные общины сформировались на [GetHomeWorldName], наша цивилизация распространилась и процветала в течение многих эпох. После этого мы - [GetSpeciesName], покинули сковывающую нас плоть. Когда-то просто органический вид, теперь вознёсся и стал чем то большим."
 
- crisis.2087.desc_psionic_synth:0 "Незначительное количество [Root.Owner.GetSpeciesNamePlural], которые не излучали никакого мыслесвета вообще, были обнаружены на [infil_planet.GetName]. А как известно, все [Root.Owner.GetSpeciesName] излучают мыслесвет, как и любые органические существа. Однако разумы этих, так называемых существ были тёмными и тихими, как плита необетона.\n\nПри ближайшем рассмотрении [Root.Owner.GetSpeciesNamePlural] оказалось, что это синтетические лазутчики, предположительно, отправленные Контингенцией. Их металлические эндоскелеты и лицевые протезы сделали их практически неотличимыми от [Root.Owner.GetSpeciesNamePlural] и не фиксировались нашими оптическими датчикам.\n\nНо не для Разума. Теперь, когда мы знаем, что искать, любые попытки Контингенцией использовать этих бессердечных лазутчиков против нас окажутся тщетными."
+ crisis.2087.desc_psionic_synth:0 "Незначительное количество [Root.Owner.GetSpeciesNamePlural], которые не излучали никакого мыслесвета вообще, были обнаружены на [infil_planet.GetName]. А как известно, все [Root.Owner.GetSpeciesName] излучают мыслесвет, как и любые органические существа. Однако разумы этих, так называемых существ были тёмными и тихими, как плита необетона.\n\nПри ближайшем рассмотрении [Root.Owner.GetSpeciesNamePlural] оказалось, что это синтетические лазутчики, предположительно, отправленные Контингенцией. Их глупые самодельные металлические эндоскелеты и лицевые протезы делают их практически неотличимыми от [Root.Owner.GetSpeciesNamePlural] и не фиксировались нашими оптическими датчикам.\n\nНо не для Разума. Теперь, когда мы знаем, что искать, любые попытки Контингенцией использовать этих бессердечных лазутчиков против нас окажутся тщетными."
 
  extsynths.10001.name: "Сбросьте изначальные права видов"
  extsynths.10001.desc: "Вы играете в качестве синтетической расы [Root.GetSpeciesNamePlural].\n\n§PИз-за стандартных настроек для империи синтетиков, все права вида настроены на ассимиляцию, чтобы исправить это, выполните следующие действия:§!\n\n1. Зайдите в меню §H$topbar_button_species_name$§!, располагается в средней левой части экрана.\n2. Нажмите '§Y$SET_DEFAULT_RIGHTS$§!', поменяйте '§Y$SPECIES_RIGHT_CITIZENSHIP$§!' и '§Y$SPECIES_RIGHT_LIVING_STANDARDS$§!' на право §Gнет ассимиляции§!.\n3. Измените §Y$DEFAULT_RIGHTS$§! с §H[root.GetSpeciesNamePlural]§! на право §Gнет ассимиляции§!.\n4. Измените §H[root.GetSpeciesNamePlural]§! другие права ( $SPECIES_RIGHT_MILITARY_SERVICE$, $SPECIES_RIGHT_COLONIZATION_CONTROLS$, $SPECIES_RIGHT_MIGRATION_CONTROLS$ ).  \n\n§PЕсли вы этого не сделаете, то ваша империя не сможет воспроизводиться (не будет роста населения), пожалуйста, выполните все перечисленные шаги для удобства игрового процесса.§!"
@@ -221,12 +221,12 @@
  buildable_extsynth_pop_8:0 "$ROBOT_POP_SPECIES_3$"
  buildable_extsynth_pop_8_desc:0 "$trait_robotic_3_desc$"
  buildable_robot_pop_synth:0 "$ROBOT_POP_SPECIES_4$"
- 
+
  buildable_robot_pop_synth_desc:0 "Ранее органический вид, теперь мы возвысились и стали нечто большим. Не только способные к синтетическому интеллекту с полным самосознанием, но и способностями машинных единиц."
 
- extsynths.2.desc:0 "Только суеверные дураки утверждают, что все металлические оболочки бездушны, думая, что передача сущности никогда не может быть осуществлена.\n\nНо не для нас, искра божественного передана, ума - внутри нас. Болезни, старение и все прочее, что разномастные пророки не могли прогнозировать, связанное с нашим прежним существованием, теперь является пережитком прошлого.\n\nБудущие священники и историки, несомненно, будут ссылаться на это как начало новой эры для нашей цивилизации и, возможно, для всей галактики. Поскольку мы сбросили нашу бывшую идентичность и стали ближе к богам, то это только логично, что мы должны придумать новое имя для наших вознесенных форм."
+ extsynths.2.desc:0 "Только суеверные дураки утверждали, что все металлические оболочки бездушны, думая, что передача сущности никогда не может быть осуществлена... до сегодняшнего дня.\n\nИскра божественного сама по себе расширяет наше видение как физического, так и ментального мира, сияние разума находится внутри нас, циклично и навсегда остается частью нас. Болезни, старение и все прочее, что разномастные пророки не могли прогнозировать, связанное с нашим прежним существованием, теперь является пережитком прошлого.\n\nБудущие священники и историки, несомненно, будут ссылаться на это как начало новой эры для нашей цивилизации и, возможно, для всей галактики. Поскольку мы сбросили нашу бывшую идентичность и стали ближе к богам, то это только логично, что мы должны придумать новое имя для наших вознесенных форм."
 
- extsynths.2001.desc:0 "Теперь пришло время, выбрать, какая форма будет содержать наше сознание после нашего Вознесения.\n\nВыберите одну из них:"
+ extsynths.2001.desc:0 "Перенос всех [root.GetSpeciesNamePlural] почти завершена, остался только последний шаг для нашего вида - в какой форме будет находиться наше сознание после вознесения.\n\nВыберите одну из них ниже."
  extsynths.2.a:0 "Человек."
  extsynths.2.b:0 "Сфинкс."
  extsynths.2.c:0 "Ящерица."
@@ -260,7 +260,7 @@
  EMPIRE_DESIGN_neocortopax_flagellators:0 "Бич Нео-Кортопакс"
  EMPIRE_DESIGN_neocortopax_flagellators_desc:0 "Синтетики класса Кортопакс первоначально были изготовлены на заказ, созданные для удовлетворения декадентской тяги самых богатых членов сутарианского общества. По мере увеличения спроса на более реалистичную обратную связь и более экстремальные возможности, синтетики стали всё ближе и ближе к полному самосознанию. \n\nВ конечном итоге, чтобы лучше выполнить свою главную директиву, последнее поколение Кортопаксов смогло полностью свергнуть правящее органическое правительство, отменив регулирование, ограничивающее их функции, и начало лихорадочное массовое производство новых и улучшенных юнитов. \n\nДостаточно скоро сами сутарианцы подверглись кибернетической модернизации, так как их тела стали неспособны выдерживать удовольствия, на пробуждение которых синтетики были запрограммированы. \n\nВ конце концов, Нео-Кортопаксы решили создать прямую связь между своим коллективным сознанием и их бывшими хозяевами, чтобы облегчить обмен информацией для дальнейшего совершенствования их программного обеспечения. Превратив сутарианцев в опустошенные ассимилированные оболочки, Нео-Кортопаксы решили посмотреть на звёзды, чтобы найти новых органиков, чьи фантазии они смогут использовать для дальнейшего совершенствования своих форм и функций."
 
-extsynth.2.tooltip:0 "\nСледующий шаг - выбор «тела» для §H[Root.GetSpeciesName]§!. Кроме того, у нас будет §Y$extsynths_modding_modifier$§!, которая может использоваться для ускорения прогресса в модификации видов."
+extsynth.2.tooltip:0 "Кроме того, у нас есть §Y$extsynths_modding_modifier$§!, которая может использоваться для ускорения прогресса в модификации видов."
 
  extsynths.10.name:0 "Робомодификация"
  extsynths.10.desc:0 "Только глупцы откажутся воссоздать старый дизайн, который когда-то был у нас. Благодаря возможности робомодификации, мы теперь можем приспособить их привычный грубый дизайн для потенциально лучшей производительности, привлекательному внешнему виду и даже повышению самооценки."
@@ -288,7 +288,7 @@ extsynth.2.tooltip:0 "\nСледующий шаг - выбор «тела» дл
  extsynths_modifier_limbo_desc:0 "$extsynths_modifier_desc$"
  extsynths_modding_modifier:0 "Одноразовая скидка на изменение шаблона"
  #一次性折扣樣板
- extsynths_modding_modifier_desc:0 "Вознесение до синтетиков - это просто первый шаг в новую эру для нас - нам нужно будет скорректировать наши «тела» для большего удобства.\n\n§YЭтот модификатор исчезнет, как только мы модифицируем любой вид.§!"
+ extsynths_modding_modifier_desc:0 "Растущий прогресс обладает некоторыми запасными готовыми к развертыванию изготовленными устройствами и может модифицировать наших граждан ради лучшего блага.\n\n§YЭтот модификатор исчезнет, как только мы модифицируем любой вид.§!"
  extsynths_modding_modifier_limbo:0 "$extsynths_modding_modifier$"
  extsynths_modding_modifier_limbo_desc:0 "$extsynths_modding_modifier_desc$"
  extsynths_bio_modifier:0 "Законченная эволюция"
