--- a/ptp_rus/localisation/mzilli_settled_system_l_russian.yml
+++ b/ptp_rus/localisation/mzilli_settled_system_l_russian.yml
@@ -7,16 +7,20 @@ pc_dormant_cold:0 "$pc_dormant$"
 pc_dormant_cold_desc:0 "$pc_dormant_desc$"
 pc_dormant_cold_adj:0 "зарождающийся"
 pc_dormant_frozen:0 "$pc_dormant$"
-pc_dormant_frozen_desc:0 "Primitive terraforming efforts have thickened this $pc_frozen$'s atmosphere enough to support liquid water on its surface. Oxygen levels and surface pressures remain low, however, and organic settlers must still wear breathing equipment outside the colony buildings."
+pc_dormant_frozen_desc:0 "$pc_dormant_desc$"
 pc_dormant_frozen_adj:0 "зарождающийся"
 pc_dormant_toxic:0 "$pc_dormant$"
 pc_dormant_toxic_desc:0 "Примитивные усилия по терраформированию истончили атмосферу этого токсичного мира настолько, что на его поверхности появилась жидкая вода. Давление на поверхности остается высоким, а уровень кислорода низким, поэтому органические поселенцы всё ещё должны носить скафандры и дыхательное оборудование вне зданий колонии."
 pc_dormant_toxic_adj:0 "зарождающийся"
+pc_dormant_molten:0 "$pc_dormant$"
+pc_dormant_molten_desc:0 "Примитивные усилия по терраформированию стабилизировали литосферу и атмосферу этого расплавленного мира настолько, чтобы поддерживать жидкую воду на его поверхности. Однако уровень кислорода и давление на поверхности остаются низкими, и органические поселенцы всё ещё должны носить дыхательное оборудование вне зданий колонии."
+pc_dormant_molten_adj:0 "зарождающийся"
 
 mod_pc_dormant_habitability:0 "Приспособленность к зарождающемуся миру"
 mod_pc_dormant_cold_habitability:0 "Приспособленность к зарождающемуся миру"
 mod_pc_dormant_toxic_habitability:0 "Приспособленность к зарождающемуся миру"
 mod_pc_dormant_frozen_habitability:0 "Приспособленность к зарождающемуся миру"
+mod_pc_dormant_molten_habitability:0 "Приспособленность к зарождающемуся миру"
 
 trait_pc_dormant_preference:0 "Предпочтение - зарождающийся мир"
 trait_pc_dormant_preference_desc:1 "$trait_pc_arctic_preference_desc$"
@@ -26,6 +30,8 @@ trait_pc_dormant_toxic_preference:0 "Предпочтение - зарождаю
 trait_pc_dormant_toxic_preference_desc:1 "$trait_pc_arctic_preference_desc$"
 trait_pc_dormant_frozen_preference:0 "Предпочтение - зарождающийся мир"
 trait_pc_dormant_frozen_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+trait_pc_dormant_molten_preference:0 "Предпочтение - зарождающийся мир"
+trait_pc_dormant_molten_preference_desc:1 "$trait_pc_arctic_preference_desc$"
 
 mzilli_settled_dormant:0 "Незавершенное терраформирование"
 mzilli_settled_dormant_desc:0 "В настоящее время колонизация [This.GetPlanetMoon] ограничена куполообразными или подземными городами. Завершение процесса терраформирования или превращение планеты в $pc_city$ снимет этот модификатор."
@@ -38,14 +44,58 @@ origin_backup_planet:0 "Запасная колония"
 origin_backup_planet_desc:0 "Родная планета этой цивилизации была уничтожена катаклизмом очень давно, но не раньше, чем они колонизировали и частично терраформировали соседнюю планету в своей звёздной системе. Эта бывшая колония пока является единственной надеждой на выживание."
 origin_tooltip_backup_planet_effects:0 "- §RПРЕДУПРЕЖДЕНИЕ: сложное происхождение§!\n- Начальная планета - §Y$pc_dormant$§! с очень малым пространством под §Yсельскохозяйственные районы§!.\n- Звёздная система содержит безжизненную родную планету и ни одного другого зарождающегося мира.\n- Начало с технологией §Y$tech_hydroponics$§!\n- Начало с опцией исследований §Y$tech_terrestrial_sculpting$§!"
 
+npc_backup_colony_homeworld_name:0 "[Root.Capital_scope.GetName]"
+
 d_helium_3:0 "Месторождение Гелия-3"
 d_helium_3_desc:0 "Этот участок реголита богат Гелием-3, мощным топливом для термоядерных реакторов."
 
 no_dormant_worlds:0 "Звёздная система не содержит зарождающихся миров."
+
+d_dormant_food:0 "Почва без перколяции"
+d_dormant_food_desc:0 "Оказавшись отрезанными от родной планеты, колонисты были вынуждены ускорить график терраформирования, очистив часть местной почвы для поддержки развитого сельского хозяйства."
 
 mzilli_settled_dormant_food:0 "Примитивная гидропоника"
 mzilli_settled_dormant_food_desc:0 "После уничтожения родного мира этой бывшей колонии колонисты были вынуждены ускорить график терраформирования. Завершение процесса терраформирования или превращение [This.GetPlanetMoon] в $pc_city$ снимет этот модификатор."
 
 mzilli_settled_mars_initializer_NAME:0 "Солнечная система (Марс)"
 mzilli_settled_mars_initializer_DESC:0 "Система, смоделированная по образцу Солнечной системы Земли, с соседними звездами, но с Марсом в качестве начальной планеты, а не Земли. Предназначена для использования с происхождением §Y$origin_backup_planet$§!, но работает и сама по себе.\n\n$system_initializer_DESC$"
+
 START_SCREEN_PART_ONE_BACKUP_PLANET:0 "Когда §H[GetHomeWorldName]§! был уничтожен несколько десятилетий назад, большая часть вида [GetSpeciesName] погибла вместе с ним. Единственными выжившими были колонисты §Y[Capital.GetName]§!, которые трудились, чтобы сделать [Capital.GetPlanetMoon] вторым домом для нашего вида. Нет нужды говорить, что проект терраформирования был ускорен, и вскоре [Capital.GetName] стала самоподдерживающейся."
+
+trait_pc_dormant_preference:0 "Предпочтение - зарождающийся мир"
+trait_pc_dormant_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+trait_pc_dormant_cold_preference:0 "Предпочтение - зарождающийся мир"
+trait_pc_dormant_cold_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+trait_pc_dormant_toxic_preference:0 "Предпочтение - зарождающийся мир"
+trait_pc_dormant_toxic_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+trait_pc_dormant_frozen_preference:0 "Предпочтение - зарождающийся мир"
+trait_pc_dormant_frozen_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+trait_pc_dormant_molten_preference:0 "Предпочтение - зарождающийся мир"
+trait_pc_dormant_molten_preference_desc:1 "$trait_pc_arctic_preference_desc$"
+
+EMPIRE_DESIGN_mzilli_settled_chathans:0 "Конфедерация Лоссоль"
+EMPIRE_DESIGN_mzilli_settled_chathans_desc:0 "Когда чатханцы впервые расщепили атом, они не теряя времени применили новую технологию, построив корабли-колонии с ядерными двигателями и быстро распространившись по планетам и лунам своей солнечной системы. Всего за несколько поколений четыре из этих колоний достигли достаточного уровня развития, чтобы объявить о своей независимости от Каппана.\n\nНачалась напряженная холодная война, когда пять миров боролись за влияние в системе Лоссоль. Союзы постоянно менялись, и баланс сил становился все более шатким.\n\n\nЭта борьба закончилась неожиданно, когда вмешался внешний источник: какой-то инопланетный звездолет врезался в мир Паннора на полусветовой скорости, столкновение разрушило кору планеты и уничтожило ее жителей. \Потрясенные этой трагедией и опасаясь новых атак со стороны чужих, четыре уцелевших мира объединились в единую конфедерацию, чтобы встретить неизвестность - и, возможно, когда-нибудь отомстить за своих погибших."
+
+EMPIRE_DESIGN_mzilli_settled_trivellans:0 "Объединенные колонии Тривеллона"
+EMPIRE_DESIGN_mzilli_settled_trivellans_desc:0 "Когда первые колонисты Джа'Ани впервые ступили на землю Конджана, это событие было проигнорировано широкой общественностью. Большинство из них отвергли космическую программу как пустую трату ресурсов, которые, по их мнению, должны были быть использованы на Тривеллоне.\n\n\nНе многие могли предположить, что эта захолустная колония однажды станет последним бастионом цивилизации Джа'Ани. Спустя более века после того, как в родную планету врезалась комета и очистила ее от жизни, колонисты Конджана и их потомки восстановили общество на оранжевой планете, разделившись на шесть наций, слабо объединенных планетарной коалицией.\n\n\nХотя никто из них еще не достаточно стар, чтобы своими глазами увидеть зеленые леса и голубые океаны Тривеллона, есть надежда, что где-то во вселенной можно найти другие подобные миры. В противном случае сам Конджан однажды может превратиться в новый Тривеллон или старый будет возвращен к жизни."
+
+# Backup Colony diplomatic dialogue
+
+BACKUP_COL_TO_NON_01_HOSTILE_GREETING:1 "Поколения [From.GetSpeciesNamePlural] веками трудились, чтобы сделать [From.Capital.GetPlanetMoon] новым домом для нашего вида. Мы не позволим ни вам, ни кому-либо другому отнять его у нас."
+BACKUP_COL_TO_NON_01_NEUTRAL_GREETING:0 "Простите нам отсутствие удобств; боюсь, что терраформирование [From.Capital.GetName] несколько... неполное."
+BACKUP_COL_TO_NON_01_FRIENDLY_GREETING:0 "С тех пор как [From.GetHomeWorldName] был уничтожен, мы изо всех сил пытались сделать [From.Capital.GetName] пригодным для жизни миром. Это было нелегко, но с такими друзьями, как [Root.GetName], дела наконец-то пошли в гору!"
+BACKUP_COL_TO_NON_01_WAR_GREETING:0 "Наш мертвый мир, наши долгие страдания... это не конец! МЫ НЕ МЕРТВЫ!"
+
+NON_TO_BACKUP_COL_01_HOSTILE_GREETING:1 "Вы не смогли спасти свою родную планету. Как [Root.GetName] может выжить на безжизненной скале?"
+NON_TO_BACKUP_COL_01_NEUTRAL_GREETING:0 "Должно быть, это была большая потеря, когда [Root.GetHomeWorldName] был уничтожен. То, что хоть один [Root.GetSpeciesNamePlural] уцелел, просто замечательно."
+NON_TO_BACKUP_COL_01_FRIENDLY_GREETING:0 "Я рад, что некоторые [Root.GetSpeciesNamePlural] смогли выжить и восстановиться после разрушения вашей родной планеты."
+NON_TO_BACKUP_COL_01_WAR_GREETING:0 "Вы уже потеряли одну родную планету, [Root.GetRulerTitle]. Стоит ли эта война того?"
+
+MZILLI_DORMANT_PRIMITIVES:0 "Не совсем конец"
+MZILLI_DORMANT_PRIMITIVES_DESC.1:0 "Инопланетная цивилизация населяет эту бесплодную луну, несмотря на её разреженную атмосферу и отсутствие местной жизни."
+MZILLI_DORMANT_PRIMITIVES_DESC.2:0 "Инопланетная цивилизация не так давно заселила эту бесплодную луну, несмотря на её разреженную атмосферу и отсутствие местной жизни."
+
+00_mzilli_settled.8.name:0 "Новый дом"
+00_mzilli_settled.8.desc.1:0 "Похоже, что §Y[From.Owner.GetName]§! не погибли когда §Y[From.Owner.home_planet.GetName]§! была уничтожена каким-то катаклизмом. Хотя это, несомненно, опустошило вид, достаточное их количество выжило и прилетело на [From.GetName], чтобы восстановить свое общество с относительно высокой технологической базой.\n\nХотя [From.Owner.GetSpeciesNamePlural] не собираются в ближайшее время терраформировать луну, замечательно, что они достигли столько, сколько достигли, учитывая то, с чем им пришлось работать."
+00_mzilli_settled.8.desc.2:0 "Похоже, что прежняя цивилизация §Y[From.GetName]§! возникла на соседней, пригодной для жизни планете, которая с тех пор была уничтожена каким-то катаклизмом. Хотя это, несомненно, опустошило вид, достаточное их количество выжило и прилетело на [From.GetName], чтобы восстановить свое общество с относительно высокой технологической базой.\n\nНесмотря на то, что инопланетяне с тех пор полностью вымерли, примечательно, что они достигли столько, сколько достигли, учитывая то, с чем им пришлось работать."
+00_mzilli_settled.8.a:0 "Родственные души!"
