--- a/ptp_rus/localisation/psionichivecsc_l_russian.yml
+++ b/ptp_rus/localisation/psionichivecsc_l_russian.yml
@@ -42,7 +42,7 @@
 
  # Planets
  pc_shrouded_hive:0 "Окутанный мир"
- pc_shrouded_hive_desc:0 "Мы привнесли Покров в нашу реальность, и теперь - Покров тоже наш дом."
+ pc_shrouded_hive_desc:0 "Хотя жить в окутанном мире нелегко, он дает нам много преимуществ. Он не только усиливает наши псионические способности, но и обеспечивает защиту от внешнего мира."
  d_shroud_resource: "Сифон ресурсов из Покрова"
  d_shroud_resource_desc: "Окутанный мир - это точка доступа к порталу, что выдаёт нам некоторые основные ресурсы, необходимые для промышленности."
 
