--- a/ptp_rus/localisation/russian/abyssal_secrets_l_russian.yml
+++ b/ptp_rus/localisation/russian/abyssal_secrets_l_russian.yml
@@ -4,7 +4,7 @@
  abyssalsecrets.1.desc_01:0 "[Root.GetSpeciesNamePlural]\n\nWe have noticed your profane bending of reality in those arcane laboratories of yours. \n\nIf you wish to avoid certain doom and perhaps the destruction of your entire quadrant, you must cease your research in those laboratories at once. We want you to demolish all your §YTemporal Research Laboratories§! immediately.\n\nConsider this your first and final warning."
  abyssalsecrets.1.desc_02:0 "[Root.GetSpeciesNamePlural]\n\nWe have noticed that you have begun to manipulate spacetime in temporal laboratories \n\nWhilst that research may appear fruitful; understand that you are delving into matters you are not ready to deal with. We want you to demolish all your §YTemporal Research Laboratories§! immediately. If you do not; it possible you could destroy yourselves.\n\nConsider this your first and final warning."
  abyssalsecrets.1.desc_03:0 "[Root.GetSpeciesNamePlural]\n\nYou think you could hide this from us? Do you know what you are getting into? You ignorant scum.\n\nUnless you wish to have our fleets visit your worlds, you must cease your research in those Temporal Research laboratories at once. To be clear, we want you to demolish all your §YTemporal Research Laboratories§! immediately.\n\nConsider this your first and final warning."
- abyssalsecrets.1.desc_04:0 "[Root.GetSpeciesNamePlural]\n\nYou have advanced much in the past centuries but there is still so much for you to learn. We have become aware that you are beginning to conduct research into reality and inter-dimensional technologies.\n\nWe heavily advise against contuing this research at it contains many, MANY dangers. To be clear, we want you to demolish all your §YTemporal Research Laboratories§! immediately.\n\nConsider this your first and final warning."
+ abyssalsecrets.1.desc_04:0 "[Root.GetSpeciesNamePlural]\n\nYou have advanced much in the past centuries but there is still so much for you to learn. We have become aware that you are beginning to conduct research into reality and inter-dimensional technologies.\n\nWe heavily advise against continuing this research at it contains many, MANY dangers. To be clear, we want you to demolish all your §YTemporal Research Laboratories§! immediately.\n\nConsider this your first and final warning."
  abyssalsecrets.1.a:0 "End Communications."
 
  abyssalsecrets.3.name:0 "Terrorist Bombing"
@@ -594,9 +594,9 @@
  abyssalsecrets.366.c:0 "How do you speak to us. Understand us?"
  abyssalsecrets.366.c.response:0 "I made you, remember? I know how you work. Though I have still have to be careful... Or else your mind will snap."
  abyssalsecrets.366.d:0 "Why do the [ss_abyss_fallen_empire_comm.GetName] speak against you?"
- abyssalsecrets.366.d.resposne:0 "They refuse to accept that this flawed universe can be repaired and are afraid of what we can acheive together."
+ abyssalsecrets.366.d.response:0 "They refuse to accept that this flawed universe can be repaired and are afraid of what we can acheive together."
  abyssalsecrets.366.e:0 "What is our mission?"
- abyssalsecrets.366.e.resposne:0 "A bright, flourishing universe empowers us all. Entropy however, brings darkness. Destroys stars, planets, erases all. Memories drain to nothingness and the universe becomes barren, meaningless. To avoid this horrofic end is destiny.\n\nBut fixing the design requires a blank slate. Be it by force or cooperation, all in this galaxy must participate in the grand design. We will kill this flawed galaxy and remake it eternal."
+ abyssalsecrets.366.e.response:0 "A bright, flourishing universe empowers us all. Entropy however, brings darkness. Destroys stars, planets, erases all. Memories drain to nothingness and the universe becomes barren, meaningless. To avoid this horrofic end is destiny.\n\nBut fixing the design requires a blank slate. Be it by force or cooperation, all in this galaxy must participate in the grand design. We will kill this flawed galaxy and remake it eternal."
  abyssalsecrets.366.f:0 "Goodbye"
 
  abyssalsecrets.370.title:0 "The Endgame"
@@ -783,8 +783,8 @@
  ss_abyss_free_ships_desc:0 "Ethereal energies remove upkeep costs for this ship."
 
  abyssalsecrets.524.name:0 "§YSudden Stellar Collapse§!"
- abyssalsecrets.524.desc_01:0 "We have felt that the §Y[from.GetName]§! system has collapsed into an abyssal black hole after the Father finally crushed it.\n\nOne step closer to the end."
- abyssalsecrets.524.desc_02:0 "Our scanners have confirmed that the star in the §Y[from.GetName]§! system has suddenly collapsed into a black hole! This event was shortly accompanied by energetic gravitational shockwaves. The black hole appears to be producing an incredibly large amount of non-baryonic radiation which is interferring with sensors and vessels in the system.\n\nThe reason for this sudden collapse is currently unknown."
+ abyssalsecrets.524.desc_01:0 "We have felt that the §Y[event_target:ss_collapse_target.GetName]§! system has collapsed into an abyssal black hole after the Father finally crushed it.\n\nOne step closer to the end."
+ abyssalsecrets.524.desc_02:0 "Our scanners have confirmed that the star in the §Y[event_target:ss_collapse_target.GetName]§! system has suddenly collapsed into a black hole! This event was shortly accompanied by energetic gravitational shockwaves. The black hole appears to be producing an incredibly large amount of non-baryonic radiation which is interferring with sensors and vessels in the system.\n\nThe reason for this sudden collapse is currently unknown."
  abyssalsecrets.524.a:0 "Keep me apprised."
  abyssalsecrets.524.b:0 "A sign of the end."
 
@@ -795,8 +795,10 @@
  ss_reality_warping_desc:0 "Changes to the fundamental constants of the universe is having a temporary effect of speeding up interstellar travel."
 
  abyssalsecrets.527.name:0 "Spatial distortions"
- abyssalsecrets.527.desc:0 "As reality begins to deteriorate, the frequency of unexplainable and detrimental events is increasing. Spatial distortions destablising tectonic plates, surges in energy networks and freak weather patterns are among such events. These small events are beginning to build up and affect planetside operations and facilities. These distortions are unfortunately hard to predict and very numerous.\n\nOur planets will slowly and randomly gain §YDevastation§!."
+ abyssalsecrets.527.desc_01:0 "As reality begins to deteriorate, the frequency of unexplainable and detrimental events is increasing. Spatial distortions destablising tectonic plates, surges in energy networks and freak weather patterns are among such events. These small events are beginning to build up and affect planetside population centers and facilities. These distortions are unfortunately hard to predict and numerous.\n\nOur planets will slowly and randomly gain §YDevastation§!."
+ abyssalsecrets.527.desc_02:0 "The father plan accelerates. He tugs on the strings and the dying dregs of this screaming reality crumble, an inadequate reponse to the Father's strength. The resilient civilisations left in this universe find their worlds, their reality, is rejecting them. Slowly but surely they will crumble. However as per the Father's promise, our worlds will be spared from the fire.\n\nOur enemies planets will slowly and randomly gain §YDevastation§!."
  abyssalsecrets.527.a:0 "Keep emergency services on standby."
+ abyssalsecrets.527.b:0 "Excellent."
 
  abyssalsecrets.541.name:0 "The End"
  abyssalsecrets.541.desc:0 "The tortured universe now breathes it's last. The wretched horror's appendages grasp all; the stars, our worlds, our minds and with it's mighty limbs it tears reality apart. What is happening now can not be explained by any sane means.\n\nSay your prayers; and rest once more under the starlight that made us. The last fragments of this universe are shattering and all will is lost. We will be nothing and nothing will remember us."
