--- a/ptp_rus/localisation/russian/curio_events_l_russian.yml
+++ b/ptp_rus/localisation/russian/curio_events_l_russian.yml
@@ -109,7 +109,7 @@
  building_fern_harvesters_desc:0 "Эти агро-купола специально разработаны, чтобы снизить число смертельных случаев, вызванных спорами папоротника."
  mod_building_fern_harvesters_max:0 "Фермы люминисцентного папоротника"
  building_fern_refiners:0 "Завод по переработке люминисцентного папоротника"
- building_fern_refiners_desc:0 "Фотоэлектрические панели генерируют небольшое количество энергии благодаря люминесцентным папоротникам, прежде растения проходят процесс очистки от токсинов и становятся более съедобными."
+ building_fern_refiners_desc:0 "Биологический материал наполняется энергией для создания необходимых питательных веществ, требуемых для выращивания папоротника.."
 
  ####################################
  # Basic Resources
@@ -262,11 +262,27 @@
  curio.166.name:0 "Страж"
  curio.166.desc:0 "В бункере хранится большое количество документов военной и гражданской разведки. Наиболее интересные из них описывают планы по созданию самодостаточного внутреннего кольца, позволяющего выжить без внешних слоев. Частью этой инициативы был §HСтраж§!, полуавтономный ИИ, которому была поставлена единственная цель - защищать людей цитадели. Однако, как сообщается, он страдал от внутренних противоречий и направил свое оружие на внутреннее святилище, пытаясь защитить внешние слои. [Root.GetLeaderName] заверил нас, что теперь едва функционирующая машина может быть отремонтирована и взята под контроль с относительной легкостью."
 
- thunder_site:0 "Люди грома"
+ slingshot_site:0 "Скалистые облака"
+ slingshot_site_intro:0 "Прогностические модели показывают, что климат [From.Planet.GetName] аномален, а сканирование показывает значительное количество силиката в его атмосфере."
+ curio.170.name:0 "Катастрофическое воздействие"
+ curio.170.desc:0 "Как и предполагалось, вечная зима на [From.Planet.GetName] неестественна. Руины планеты и окаменелости биосферы указывают на то, что на [From.Planet.GetName] изначально был гораздо более тропический климат. [Root.GetLeaderName] пришел к выводу, что причина этого и огромного количества атмосферного силиката довольно проста: гигантский астероид столкнулся с [From.Planet.GetName]. Только при первом столкновении испарилось 16% поверхности планеты. Огромное количество обломков было запущено в атмосферу, чтобы затем снова обрушиться на планету. Этот процесс перегрел атмосферу, что привело к широкомасштабным лесным пожарам по всей планете. Большое количество испарившегося материала в сочетании с копотью от горящей планеты уничтожило весь солнечный свет, погрузив [From.Planet.GetName] во тьму и вечную зиму."
+ curio.171.name:0 "Жестокая простота"
+ curio.171.desc:0 "Анализ состава, проведенный командой археологов, показывает, что астероид, столкнувшийся с [From.Planet.GetName], прибыл из-за пределов звёздной системы. Вероятность такого столкновения астрономически мала. Недавние находки в цивилизованных руинах планеты указывают на то, что за несколько месяцев до столкновения её жители начали транслировать свое присутствие, пытаясь найти инопланетную жизнь. Это зловещее время порождает довольно пугающую возможность. Либо жителям [From.Planet.GetName] не повезло больше всего, либо, не зная об этом, кто-то услышал их трансляции и решил заставить их замолчать. В результате астероид врезался в их планету и уничтожил их цивилизацию. Кто был виновником, и был ли он вообще, навсегда останется загадкой."
+
+ menofthunder_site:0 "Неестественный блеск"
+ menofthunder_site_intro:0 "Большие участки поверхности планеты кажутся застекленными, хотя есть некоторые признаки существования здесь предыдущей цивилизации."
+ curio.180.name:0 "Неестественный блеск"
+ curio.180.desc:0 "Наши ученые подтвердили, что, как и предполагалось, стекло, покрывающее поверхность [From.Planet.GetName], является искусственным и, вероятно, является результатом перегрева поверхности. Те немногие руины, которые остались, указывают на то, что местная цивилизация ещё не освоила космические полеты и не обладала необходимыми технологиями для нагрева больших территорий до достаточно высоких температур для достижения такого выраженного эффекта. [Root.GetLeaderName] считает, что местная цивилизация погибла от внешней угрозы, и направляет усилия команды на выяснение природы этой угрозы."
+ curio.181.name:0 "Концентрированный шторм"
+ curio.181.desc:0 "Ещё одна странность привлекла внимание наших ученых. Климат [From.Planet.GetName] был относительно бурным, однако определенное скопление облаков оставалось неподвижным над тем, что считалось относительно незначительной структурой. При ближайшем рассмотрении это сооружение оказалось своего рода монументом, заполненным десятками статуй, одетых в военную форму. Статуи окружают центральный столб, на котором выбита какая-то надпись. В настоящее время команда работает над расшифровкой ее смысла."
+ curio.182.name:0 "Люди Грома"
+ curio.182.desc:0 "Мы успешно перевели надпись. «Пусть эта святыня умиротворит тех, кто спустился с небес, тех §HЛюдей Грома§!! Наши грехи столь велики, что свет льется с ясного неба, чтобы сжечь нечистоты, наши грехи столь глубоки, что мы не знали о своих проступках. Пусть эти §HЛюди Грома§! однажды вернутся и простят наши ошибки». Казалось бы, молчание пустынного ландшафта [From.Planet.GetName] говорит об их возвращении. Что касается причины истребления планеты, мы можем только догадываться."
  ####################################
  # Event Responses
  ####################################
  TRAGIC:0 "Трагично."
+ OMINOUS:0 "Зловеще."
  I_SEE:0 "Ясно."
  TROUBLING:0 "Настораживает."
  UNFORTUNATE:0 "Как прискорбно."
+ BRING_IT_ONLINE:0 "Запустите."
