--- a/ptp_rus/localisation/russian/fb_l_russian.yml
+++ b/ptp_rus/localisation/russian/fb_l_russian.yml
@@ -4,3 +4,9 @@
  fbengine.01.desc:0 "Было внесено предложение о регулировке униформы для всех руководящих ролей федерации. Какой выбор мы сделаем?"
  fbengine.01.a:0 "Да, это отличная идея."
  fbengine.01.b:0 "Нет, наши отличия есть наша сила."
+
+ edict_federation_uniforms:0 "Униформа Федерации"
+ edict_federation_uniforms_desc:0 "Мы оденем всех наших руководителей в одинаковую форму."
+ federationbuildersclothingmod_tooltip:0 "Это позволит одеть всех лидеров нашей империи в соответствующую униформу."
+
+ FLAG_CATEGORY_fedbuild:0 "Федерация"
