--- a/ptp_rus/localisation/russian/l_russian_boo_origins.yml
+++ b/ptp_rus/localisation/russian/l_russian_boo_origins.yml
@@ -7,7 +7,7 @@
  BOO_origin_antediluvian_knowledge_tooltip_effects:0 "Вы начинаете игру с технологией §YУправленческий ИИ§! и §Y5§! малыми артефактами."
  BOO_origin_silk_road:0 "Шёлковый путь"
  BOO_origin_silk_road_desc:0 "Торговля сыграла важную роль в объединении многих народов этой цивилизации, прежде чем они достигли звезд. Величайший из своих торговых путей они называли «Шёлковый путь»."
- BOO_origin_silk_road_tooltip_effects:0 "Вы начинаете игру с технологией §YОффшорные торговые компании в космосе§! и модификатором §YШёлковый путь§!, дающий §Y2§! слота торговца и §Y10§! к объёму торговли на родном мире."
+ BOO_origin_silk_road_tooltip_effects:0 "Вы начинаете игру с технологией §YОффшорные торговые компании в космосе§! и модификатором §YШёлковый путь§!, дающий §Y1§! слот торговца и §Y5§! к объёму торговли на родном мире."
  BOO_origin_slow_evolution:0 "Медленная эволюция"
  BOO_origin_slow_evolution_desc:0 "Из-за различных обстоятельств, от биологии до географии и удачи, эта цивилизация эволюционировала и развивалась дольше, чем большинство других. Они - старая раса, которая многое узнала о себе и своём мире, прежде чем взяться за звёзды."
  BOO_origin_slow_evolution_tooltip_effects:0 "Вы начинаете игру с технологиями §YГенетическое картирование§! и §YГенное здравоохранение§!."
@@ -43,7 +43,7 @@
  BOO_origin_militarist_tooltip_effects:0 "\n- Начало с исследованной технологией §YЭсминцы§!\n- Начало с модификатором империи §YРассвет войны§!, который даёт §G+10%§! к привлекательности милитаризма, §G+5%§! £engineering£ к инженерным исследованиям и §G+10%§! к скорости постройки кораблей."
  BOO_origin_spiritualist:0 "Истинная вера"
  BOO_origin_spiritualist_desc:0 "Глобальная религия возникла и распространилась по всей этой цивилизации в самом начале ее истории, давая своим людям чувство цели и единства с самых первых дней."
- BOO_origin_spiritualist_tooltip_effects:0 "\n- Начало с исследованной технологией §YГолографические ритуалы§!\n- Начало с модификатором империи §YОбещанный рай§!, который даёт §G+10%§! к привлекательности спиритуализма и уменьшает стоимость содержания лидеров."
+ BOO_origin_spiritualist_tooltip_effects:0 "\n- Начало с технологией §YГолографические ритуалы§! как доступный вариант\n- Начало со §Y150§! £rare_crystals£ редкими кристаллами\n- Начало с модификатором империи §YОбещанный рай§!, который даёт §G+10%§! к привлекательности спиритуализма и уменьшает стоимость содержания лидеров."
  BOO_origin_materialist:0 "Путешественники к звёздам"
  BOO_origin_materialist_desc:0 "Перед формированием мирового правительства различные нации этой цивилизации работали вместе, чтобы узнать больше о Вселенной, независимо от политики. Как только была открыта технология сверхсветовых путешествий, народы мира объединились, чтобы отправить свой вид в будущее."
  BOO_origin_materialist_tooltip_effects:0 "\n- Начало с полностью открытыми традициями ветки «Открытия»\n- Начало с модификатором империи §YПоследний рубеж§!, который даёт §G+10%§! к привлекательности материализма, §G+5%§! £physics£ к физическим исследованиям и §G+5%§! к скорости исследований аномалий."
@@ -62,6 +62,9 @@
  BOO_origin_gate:0 "Врата"
  BOO_origin_gate_desc:0 "Предки этой цивилизации были с другой планеты, возможно, даже из другой реальности или вселенной. Однажды открылся таинственный портал, соединяющий их родную планету планету с этой. Как только их предки начали колонизировать эту планету, портал закрылся чтобы никогда больше не открыться. Столетия спустя портал остаётся закрытым, и воспоминания о старом доме быстро исчезают. В целом, этой цивилизации пришлось быстро адаптироваться к миру, в котором они не являются родными."
  BOO_origin_gate_tooltip_effects:0 "\n- Начало с открытой традицией «Адаптация»\n- Начало с модификатором империи §YИз другого измерения§!, который увеличивает на §G+5%§! £unity£ и £influence£\n- Начало с модификатором родного мира §YНавеки закрытый портал§!, который даёт §G+5%§! ко всем исследованиям и §Y1§! должность §YХранитель врат§!, который потребляет §Y1§! £consumer_goods£ ТМС и производит §Y2§! £unity£ и §Y1§! £influence£"
+ BOO_origin_former_scavengers:0 "Бывшие мусорщики"
+ BOO_origin_former_scavengers_desc:0 "Сколько себя помнит, эта цивилизация жила за счет сбора драгоценных и полезных материалов на своей родной планете. По мере того, как они развивались как вид, развивалась и их окружающая среда, чтобы поддерживать их образ жизни, связанный с переработкой. Хотя с тех пор они стали более типичной цивилизацией, их происхождение как мусорщиков оказывает большое влияние на их общество."
+ BOO_origin_former_scavengers_tooltip_effects:0 "\n- Начало с дополнительными §Y2§! £pop£ поселениями\n- Начало с дополнительным §Yгорнодобывающим районом§!\n- Начало с модификатором родной планеты §YЭкосистема мусорщиков§!, который даёт §G+2§! к максимальному количеству §Yгорнодобывающих районов§! и §G+10%§! £minerals£ минералов от должностей\n- Начало с технологией §YГеотермальный гидроразрыв§!"
  BOO_origin_xxxxx:0 "xxxxx"
  BOO_origin_xxxxx_desc:0 "xxxxx"
  BOO_origin_xxxxx_tooltip_effects:0 "xxxxx"
@@ -109,6 +112,8 @@
  BOO_modifier_from_another_dimension_desc:0 "Основатели этой империи произошли от поселенцев, которые пересекли портал в это измерение и оказались здесь в ловушке после того, как портал закрылся. Им пришлось объединиться, чтобы приспособиться к этой странной, чужой реальности."
  BOO_modifier_ancient_nuclear_war:0 "Древняя ядерная война"
  BOO_modifier_ancient_nuclear_war_desc:0 "Тысячелетия назад ядерная война опустошила эту планету. К счастью, не всё было разрушено, но, хотя жизнь начинает возвращаться в нормальное русло, шрамы от этого старого конфликта остаются."
+ BOO_modifier_scanvenger_ecosystem:0 "Экосистема мусорщиков"
+ BOO_modifier_scanvenger_ecosystem_desc:0 "Что-то в том, как развивалась экосистема этой планеты, облегчает поиск и добычу полезных ископаемых."
  BOO_modifier_xxx:0 "xxx"
  BOO_modifier_xxx_desc:0 "xxx"
 
