--- a/ptp_rus/localisation/russian/modifiers_expanded_l_russian.yml
+++ b/ptp_rus/localisation/russian/modifiers_expanded_l_russian.yml
@@ -76,7 +76,7 @@ d_paradise_lost_robot_blocker:0 "£blocker£ Robot Graveyard"
 d_paradise_lost_robot_blocker_desc:0 "The ancient remains of our former caretakers."
 d_paradise_lost_reactor_blocker:0 "£blocker£ Old Reactors"
 d_paradise_lost_reactor_blocker_desc:0 "Our caretakers built these power facilities long ago. They have since fallen into disrepair."
-caretaker_reactor:0 "The restored reactor gives §G+10§! monthly £energy£ §YEnergy§! and §G+2§! "£job_technician£ $job_technician$ Jobs"
+caretaker_reactor:0 "The restored reactor gives §G+25§! monthly £energy£ §YEnergy§!"
 d_paradise_lost_reactor:0 "Restored Reactors"
 d_paradise_lost_reactor_desc:0 "We have restored our caretakers' old power facilities, integrating them into our power grid."
 
@@ -299,6 +299,8 @@ prison_planet:0 "Penal Colony"
 prison_planet_desc:0 "Once thousands of prisoners were kept on this inhospitable world."
 incubating_egg:0 "Planet-Sized Egg"
 incubating_egg_desc:0 "Although it looks like a normal planet, this world is actually the massive egg of an unknown spaceborne organism."
+scared_planet:0 "Scared Planet"
+scared_planet_desc:0 "This world was once used as a weapon test site, which has left the surface thoroughly scared."
 
 pleasure_palace:0 "Pleasure Palace"
 pleasure_palace_desc:0 "Constructed with an eye to perfection and featuring a fully customizable global life support system, every facet of this habitat's design is devoted to providing a wide range of vacation options for citizens in need of relaxation."
@@ -329,6 +331,11 @@ planet_hidden_lab:0 "Hidden Laboratory"
 planet_hidden_lab_desc:0 "An ancient laboratory was hidden on this world."
 
 # Country Modifiers
+reality_perforator_5:0 "$r_reality_perforator$"
+reality_perforator_5_desc:0 "$reality_perforator_1_desc$"
+reality_perforator_6:0 "$r_reality_perforator$"
+reality_perforator_6_desc:0 "$reality_perforator_1_desc$"
+
 prepared_for_the_end:0 "Prepared for the End"
 prepared_for_the_end_desc:0 "You have foreseen the doom that is almost upon us."
 prepared_for_the_end_tooltip:0 "Damage to Endgame Crisis factions: §G+5%§!"
@@ -357,10 +364,7 @@ inspiring_insulting_admiral:0 "Inspiring Admiral"
 country_war_protests:0 "Anti-War Protests"
 fe_missionaries:0 "Holy Guardian Missionaries"
 fe_resource_shortage:0 "Resource Shortage"
-reality_perforator_5:0 "$r_reality_perforator$"
-reality_perforator_5_desc:0 "$reality_perforator_1_desc$"
-reality_perforator_6:0 "$r_reality_perforator$"
-reality_perforator_6_desc:0 "$reality_perforator_1_desc$"
+saved_homeworld:0 "Restored Homeworld"
 
 adopted_amoeba:0 "Adopted Amoeba"
 adopted_amoeba_desc:0 "This country has adopted a lost space amoeba."
@@ -399,13 +403,14 @@ strange_fossils_dry_gestalt:0 "$strange_fossils_dry_eco$"
 strange_fossils_cold:0 "Strange Fossils: Eco-Engineering Insights"
 strange_fossils_wet:0 "Strange Fossils: Climate Control Insights"
 moon_bump_megastructure:0 "Moon Bump: Construction Insights"
-three_londor_triumph:0 "3 Londor Insights"
-three_londor_triumph_hive:0 "3 Londor Insights"
+three_londor_triumph:0 "3Londor Insights"
+three_londor_triumph_hive:0 "3Londor Insights"
 aurora_encryption:0 "Magnetospheric Encryption"
 aurora_encryption_desc:0 "The science division has managed to reproduce the encryption technique found in the Aurora Borealis patterns, giving us a unique tool."
 hyperlane_insights:0 "Hyperlane Manipulation"
 lost_moment_memento_gestalt:0 "$lost_moment_memento$"
 lost_moment_memento_gestalt_desc:0 "$lost_moment_memento_desc$"
+rage_sage_research:0 "Sage Rage Research"
 
 # Pop Modifiers
 dportal_unhappy_researchers:0 "Unhappy Researchers"
@@ -417,6 +422,8 @@ memorex_dazed:0 "Dazed"
 
 # Fleet Modifiers
 void_dragon_tachyon_damage:0 "Tachyon Damage"
+slow_down_asteroid:0 "Slow Asteroid"
+slow_down_asteroid_desc:0 "Asteroids aren't meant to travel fast"
 
 # Faction Modifiers
 approved_xeno_rights_good:0 "Passed Xeno Rights"
@@ -432,6 +439,16 @@ mod_damage_vs_country_type_shroud_spirits_mult:0 "Damage to Shroud Spirits"
 mod_damage_vs_country_type_guardian_hatchling_two_mult:0 "Damage to Void Dragons"
 leviathan_01_void_dragon:0 "Void Dragon"
 leviathan_01_void_dragon_plural:0 "Void Dragons"
+
+is_auth_corporate_tooltip:0 "Is a Megacorp or Merchant Guild"
+is_civic_environmentalist_tooltip:0 "Has an Environmentalist-Inclined Civic"
+is_civic_terraformer_tooltip:0 "Has a Terraforming-Related Civic or Ascension Perk"
+is_civic_has_elite_tooltip:0 "Has an Elitist Civic"
+is_civic_authoritarian_tooltip:0 "Has an Authoritarian Civic"
+is_civic_militarist_tooltip:0 "Has a Militaristic Civic"
+is_civic_materialist_tooltip:0 "Has a Materialistic Civic"
+is_civic_spiritualist_tooltip:0 "Has a Spiritualist Civic"
+is_civic_expansionist_tooltip:0 "Has an Expansionist Civic"
 
 
 ####################################
