--- a/ptp_rus/localisation/russian/expanded_l_russian.yml
+++ b/ptp_rus/localisation/russian/expanded_l_russian.yml
@@ -6,6 +6,8 @@
 
 casus_belli_cb_stop_atrocities:0 "Stop Atrocities"
 casus_belli_cb_stop_robots:0 "Outlaw AI"
+casus_belli_cb_revenge_for_eaten_world:0 "Ate Our World"
+casus_belli_cb_end_threat_revenge_for_eaten_world:0 "Ate their World"
 
 war_goal_wg_stop_atrocities:0 "Stop Atrocities"
 war_goal_wg_stop_atrocities_desc:0 "War is waged to force the enemy to stop their abominable practices."
@@ -14,35 +16,41 @@ war_goal_wg_stop_robots_desc:0 "War is waged to force the enemy to abandon their
 war_goal_wg_kill_robots:0 "Cleansing"
 war_goal_wg_kill_robots_desc:0 "War is waged to cleanse the enemy from the face of the galaxy."
 
+war_goal_wg_revenge_for_eaten_world:0 "$casus_belli_cb_revenge_for_eaten_world$"
+war_goal_wg_revenge_for_eaten_world_desc:0 "War is waged to utterly conquer the enemy that ate our world."
+war_goal_wg_end_threat_revenge_for_eaten_world:0 "$casus_belli_cb_end_threat_revenge_for_eaten_world$"
+war_goal_wg_end_threat_revenge_for_eaten_world_desc:0 "War is waged to utterly conquer the enemy whose world we ate."
+
 ####################################
 # 	Governments
 ####################################
 
 origin_cradle:0 "Galactic Cradle"
 origin_cradle_desc:0 "This society has been cut off from the rest of the galaxy."
-origin_tooltip_cradle_effects:0 "§RWARNING: Challenging Origin§!\n§RWARNING: Not Recommended for Multiplayer§!\nStart in a resource-rich but isolated cluster, connected to the galaxy by a single wormhole."
+origin_tooltip_cradle_effects:0 "§RWARNING: Challenging Origin§!\n§RWARNING: Not Recommended for Multiplayer§!\n- Start in a resource-rich but isolated cluster, connected to the galaxy by a single wormhole."
 origin_preserve:0 "Galactic Preserve"
 origin_preserve_desc:0 "Ancient precursors once used this world as a preserve for primitive aliens species. When the precursors abandoned them, the primitives worked together to build a new civilization from what was left behind."
-origin_tooltip_preserve_effects:0 "Starts with §Y24§! pops of various species from across the galaxy\nHomeworld starts with the $d_preserve_habitability$ deposit, giving additional habitability"
+origin_tooltip_preserve_effects:0 "- Starts with §Y24§! pops of various species from across the galaxy\n- Homeworld starts with the $d_preserve_habitability$ deposit, giving additional habitability"
 origin_ship_graveyard:0 "Ship Graveyard"
 origin_ship_graveyard_desc:0 "The wreckage of thousands of starships litter the surface of this society's homeworld."
-origin_tooltip_ship_graveyard_effects:0 "Starts with a salvaged cruiser\nHomeworld starts with the $origin_ship_graveyard$ deposit"
+origin_tooltip_ship_graveyard_effects:0 "- Starts with a salvaged cruiser.\n- Homeworld starts with the $origin_ship_graveyard$ deposit."
+origin_tooltip_ship_graveyard_overlord_effects:0 "$origin_tooltip_ship_graveyard_effects$\n- Starts in contact with the Salvager Enclave."
 origin_paradise_lost:0 "Paradise Lost"
 origin_paradise_lost_desc:0 "Once this society lived under the watchful eye of their robotic caretakers, until a fatal hardware error caused the machines to stop working. For the first time in generations, they must survive on their own."
-origin_tooltip_paradise_lost_effects:0 "Homeworld starts out less developed, but with infrastructure left behind by the old Rogue Servitors\nStarts with the §Y$tech_powered_exoskeletons$§! and §Y$tech_subdermal_stimulation$§! technologies already unlocked\nGain the §Y$trait_pampered$§! trait, granting:\n  Worker and Slave Happiness: §R-10%§!\n  Consumer Good and Amenity Consumption: §R+10%§!"
+origin_tooltip_paradise_lost_effects:0 "- Homeworld starts out less developed, but with infrastructure left behind by the old Rogue Servitors\n- Starts with the §Y$tech_powered_exoskeletons$§! and §Y$tech_subdermal_stimulation$§! technologies already unlocked\n- Gain the §Y$trait_pampered$§! trait, granting:\n  Worker and Slave Happiness: §R-10%§!\n  Consumer Good and Amenity Consumption: §R+10%§!"
 origin_convergent_evolution:0 "Convergent Evolution"
 origin_convergent_evolution_desc:0 "This society shares its homeworld with another species on the cusp of sapience."
-origin_tooltip_convergent_evolution_effects:0 "Starts with §Y6§! presapient pops\nStarts with the §Y$tech_genome_mapping$§! technology already unlocked\nStarts with the §Y$tech_epigenetic_triggers$§! tech option."
+origin_tooltip_convergent_evolution_effects:0 "- Starts with §Y6§! presapient pops\n- Starts with the §Y$tech_genome_mapping$§! technology already unlocked\n- Starts with the §Y$tech_epigenetic_triggers$§! tech option."
 
 START_SCREEN_PRESERVE:0 "Long ago, some unknown precursor brought our people to [GetHomeWorldName], along with many other species from across the galaxy. If we ever knew who they were or why they took us here, those answers have long been lost to history.\n\nAfter the precursors abandoned us, we had only each other to rely on. Together we rebuilt a new civilization from the ashes of what was left behind.\n\nNow with the invention of the hyper drive, the stars themselves are finally within reach. Whatever we find out there, we will face it together."
-START_SCREEN_PARADISE_LOST:0 "Once [GetHomeWorldName] was a paradise. Our mechanical caretakers ensured that the [GetSpeciesName] wanted for nothing, and for generations, we lived in bliss.\n\nBut our utopia was not to last. Unbeknownst to our ancestors, our caretakers suffered from an irreparable hardware error. One day the machines simply stopped working, forcing us to fend for ourselves for the first time in generations. Many perished in the aftermath, unable to survive this new, unforgiving world. In time we learned to mastered our caretakers' old infrastructure, creating a new civilization from the ashes.\n\nIt was among the ruins that we found our caretakers' final gift: the incomplete designs for a hyper drive engine. Now aware of the existence of the hyperlane network, the finest minds of the [GetName] could finished their work. The stars themselves are finally within our grasp!"
+START_SCREEN_PARADISE_LOST:0 "Once [GetHomeWorldName] was a paradise. Our mechanical caretakers ensured that the [GetSpeciesName] wanted for nothing, and for generations, we lived in bliss.\n\nBut our utopia was not to last. Unbeknownst to our ancestors, our caretakers suffered from an irreparable hardware error. One day the machines simply stopped working, forcing us to fend for ourselves for the first time in generations. Many perished in the aftermath, unable to survive this new, unforgiving world. In time we mastered our caretakers' old infrastructure, creating a new civilization from the ashes.\n\nIt was among the ruins that we found our caretakers' final gift: the incomplete designs for a hyper drive engine. Now aware of the existence of the hyperlane network, the finest minds of the [GetName] could finished their work. The stars themselves are finally within our grasp!"
 
 ####################################
 # 	Technologies
 ####################################
 
 tech_gray_goo:0 "Nanite Dispersal"
-tech_gray_goo_desc:0 "A well timed and calibrated energy burst can disrupt the nanite composing the Gray Tempest's ships, giving us an opening to strike."
+tech_gray_goo_desc:0 "A well timed and calibrated energy burst can disrupt the nanites composing the Gray Tempest's ships, giving us an opening to strike."
 tech_pain_farms:0 "Livestock Ranching"
 tech_pain_farms_desc:0 "Improved food harvesting techniques will lead to tastier and more compliant livestock."
 tech_asteroid_strike:0 "Asteroid Strikes"
@@ -146,12 +154,20 @@ decision_friendly_wildlife_desc:0 "We will introduce a specially-engineered retr
 decision_friendly_wildlife_effects:0 "50% chance of adding a $d_alien_pets_deposit$ deposit"
 decision_mycorrhiza:0 "Reinvigorate Ecosystem"
 decision_mycorrhiza_desc:0 "Introducing hardy mycorrhizal fungus to this world will revitalize the world's biosphere."
-
+decision_cloned_wildlife:0 "Introduce Cloned Wildlife"
+decision_cloned_wildlife_desc:0 "By using data collected from an ancient genetic library, we can introduce long-extinct alien lifeforms to this world."
+decision_cloned_wildlife_effects:0 "\n§RSome of the cloned creatures may be more dangerous than we realized.§!\n"
+decision_introduce_chaos_gestalt:0 "$decision_introduce_chaos$"
+decision_introduce_chaos_gestalt_desc:0 "This world is too perfect for our bio-trophies - our wards are having mental breakdowns in the streets. Our only real option is to introduce some imperfections."
 decision_restore_climate_systems:0 "Restore the Climate Controls"
 decision_restore_climate_systems_desc:0 "The precursor environmental systems can be restored to its full functionality, turning this world into a Gaia World"
+
 edict_project_agni:0 "Start Project Agni"
 edict_project_agni_desc:0 "This ambitious hyperlane project will require a large amount of rare resources"
 edict_project_agni_tooltip_effect:0 "Unlocks the Agni Project"
+edict_event_evacuation_protocols:0 "$edict_evacuation_protocols$"
+edict_event_evacuation_protocols_desc:0 "One of our worlds is in critical condition. We must prepare to evacuate."
+requires_another_colony:0 "§RThere is no colony to evacuate to!§!"
 
 artifact_observer_clue:0 "Discover Observer Insight"
 artifact_observer_clue_desc:0 "We should be able to piece together more of the mysteries surrounding the builders of the observation post over our homeworld using these artifacts."
@@ -176,6 +192,8 @@ r_war_forge_allows_robot_tooltip:0 "You must outlaw robots to make use of the re
 r_three_londor:0 "Isolated 3Londor Core"
 r_three_londor_desc:0 "This isolated mainframe core contains the ai that corrupted the entire 3Londor computer network, now hidden behind a tightly-secured firewall."
 r_three_londor_passive_effect:0 "Robotic Units: §G+20%§! £amenities£ $MOD_PLANET_AMENITIES_MULT$ from jobs."
+r_cryo_core_effect:0 "$tr_expansion_colonization_fever_desc$\n$mod_weapon_type_energy_weapon_fire_rate_mult$: §G+20%§!"
+decision_baol_life_seed_gaia:0 "All organic pop gain $trait_pc_gaia_preference$"
 
 ####################################
 # 	Traits
@@ -194,6 +212,7 @@ TRAIT_COLD_SURVIVOR_EFFECTS:0 "Cold Habitability: §G+10%§!"
 trait_memorex_comatos:0 "Comatose"
 trait_memorex_comatos_desc:0 "§LThis pop has been driven comatose due to unwise use of the Memorex"
 TRAIT_MEMOREX_COMATOS_EFFECT:2 "$mod_planet_jobs_produces_mult$: §R-200%§!\nCannot generate §YLeaders§!\nCannot §YReproduce§!, and will slowly die off."
+trait_memorex_comatos_fixed:0 "§RRequires completing the §Y$FIXING_MEMORES_PROJECT$§! Special Project to remove.§!"
 leader_trait_archaeologist_ancrel_tooltip:0 "§Y$MOD_SHIP_ARCHAEOLOGICAL_SITE_EXCAVATION_SPEED_MULT$:§! §G+25.0%§!\n§YAncient Civilizations Anomalies:§!\n   Anomaly Research Speed: §G+25.0%§!"
 trait_pampered:0 "Pampered"
 trait_pampered_desc:0 "§LThis species would prefer if someone else took care of them."
