--- a/ptp_rus/localisation/russian/projects_expanded_l_russian.yml
+++ b/ptp_rus/localisation/russian/projects_expanded_l_russian.yml
@@ -18,8 +18,8 @@ DATHNAK_TEST_2_PROJECT:0 "Dathnak Defense Initiative"
 DATHNAK_TEST_2_PROJECT_DESC:0 "The Dathnak have sent us designs for a device which they hope will shield their planets from harm, and have asked us to test it on a nearby gas giant"
 DATHNAK_TEST_3_PROJECT:0 "Dathnak Defense Initiative"
 DATHNAK_TEST_3_PROJECT_DESC:0 "The Dathnak have sent us an improved prototype that should protect their planets from harm, while hopefully not permanently sealing them away."
-SAVING_PLANET_EARTH_PROJECT:0 "Ecological Reparation of [Root.GetName]"
-SAVING_PLANET_EARTH_PROJECT_DESC:0 "Repair the ecological damage done to [Root.GetName] and restore the planet to its former glory."
+SAVING_PLANET_EARTH_PROJECT:0 "Ecological Reparation of [saving_homeworld.GetName]"
+SAVING_PLANET_EARTH_PROJECT_DESC:0 "Repair the ecological damage done to [saving_homeworld.GetName] and restore the planet to its former glory."
 CRASHED_ARK_1_PROJECT:0 "Search [colony_planet_1.GetName]"
 CRASHED_ARK_1_PROJECT_DESC:0 "Search for evidence of one of the missing ark ships."
 CRASHED_ARK_2_PROJECT:0 "Search Elpis"
@@ -184,3 +184,39 @@ hunting_lost_colony_2_poi:0 "Investigate System"
 hunting_lost_colony_2_poi_desc:0 "The [Root.GetLostColonyShip]'s ion trail has been tracked to this system. We must investigate."
 fe_attack_tiyanki_killer_chain_title:0 "Task: Punish Atrocities"
 fe_attack_tiyanki_killer_chain_desc:0 "The §H[FallenEmpireTaskOrigin.GetName]§! have asked us to punish the §H[FallenEmpireTaskTarget.GetName]§! for destroying the Tiyanki's breeding grounds."
+
+####################################
+# 	SITUATIONS
+####################################
+
+divination_worm:0 "Sign of the Worm"
+divination_worm_type:0 "Divination"
+divination_worm_desc:0 "The wheels of the shroud turn, and the past shall cast a long shadow on the present. Tread carefully but boldly, and consider what wisdom may be learned from what has been left behind."
+divination_worm_embrace:1 "We embrace the Shroud's will by seeking wisdom from the past"
+divination_worm_denied:1 "We defy the Shroud's will by recklessly forging our own future"
+divination_worm_monthly_change_tooltip:0 "The progress of this §YSituation§! will depend largely on our relations with other Empires. For instance, setting our §YDiplomatic Stance§! to §YIsolationist§! or excavating archaeological sites will make it progress faster, while ignoring dig sites will stall progress."
+
+situation_damaged_ecosystem:0 "Damaged Ecosystem"
+situation_damaged_ecosystem_type:0 "Damaged Ecosystem"
+situation_damaged_ecosystem_desc:0 "The ecosystem of §Y[Target.GetHomeWorldName]§! was damaged by centuries of economic exploitation. We will need advanced terraforming technologies in order to restore our homeworld."
+situation_damaged_ecosystem_monthly_change_tooltip:0 "$situation_monthly_change_tooltip_little_control$"
+stage_ecosystem_damaged:0 "Heavy Ecological Damage"
+stage_ecosystem_heavy_damaged:0 "Catastrophic Ecological Damage"
+stage_ecosystem_fails:0 "Complete Ecological Collapse"
+approach_conserve:0 "Convserve"
+damaged_ecosystem_approach_conserve_effect:0 "Funding planet-wide conservation efforts will slow the deterioration of our homeworld.\n\nSituation progresses §G25%§! slower."
+approach_terraform:0 "Terraform"
+damaged_ecosystem_approach_terraform_effect:0 "Strategic use of terraforming gases will greatly slow the deterioration of our homeworld.\n\nSituation progresses §G50%§! slower."
+approach_exploit:0 "Exploit"
+damaged_ecosystem_approach_exploit_effect:0 "Ramping up industrial production will accelerate the deterioration of our homeworld.\n\nSituation progresses §R50%§! faster."
+
+situation_worm_activated:0 "Ravenous Worm"
+situation_worm_activated_type:0 "Ravenous Worm"
+situation_worm_activated_desc:0 "A gargantuan worm-like creature has awoken on §Y[Target.GetName]§!, devouring everything in sight."
+situation_worm_activated_monthly_change_tooltip:0 "$situation_monthly_change_tooltip_little_control$"
+stage_planet_destroyed:0 "[Target.GetName] will be consumed."
+approach_attack:0 "Attack"
+worm_activated_approach_attack_effect:0 "Fighting the worm will slow its progress."
+approach_flee:0 "Evacuate"
+worm_activated_approach_flee_effect:0 "Focusing our efforts on evacuating [Target.GetName] will make resettling pops off-world easier."
+string_planet_size:0 " Planet Size"
